Changed to java 1.7.